# mochi

./: .gitignore  .gitmodules  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json
data/assay/: mochi-baseline.json  mochi-eval.yaml
docs/: README.md  architecture.md  data-pipeline.md  lsp-context-extraction.md  mcp-best-practices.md  mcp-design.md  roadmap.md  training-strategy.md  uncertainty-register.md
docs/improvements/: 01-lsp-context-enhancement.md  02-training-data-diversification.md  03-prompt-design-optimization.md  04-inference-config-optimization.md  05-evaluation-pipeline.md
scripts/: assay_agent.ts  assay_compare.ts  assay_evaluate.ts  collect_base_patterns.py  collect_kiri_patterns.py  compare_models.py  create_enhanced_mixed_dataset.py  create_mixed_dataset.py  evaluate_adapter_stack.py  evaluate_adapters.py  evaluate_all_adapters.py  evaluate_comprehensive.py  evaluate_golden.py  evaluate_model.py  evaluate_with_llm_judge.py  mcp_server.py  regenerate_training_data.py  test_lsp_detailed.py  test_lsp_integration.py  test_mcp_client.ts  test_mcp_query.ts  train_base_adapter.py  train_gptoss_lora.py  train_model.py  train_project_adapter_enhanced.py  train_project_adapter_kiri.py  train_project_adapter_mixed.py  train_qwen3_coder_lora.py  train_with_tests.sh  verify_gptoss_accuracy.py
src/mochi/: __init__.py  cli.py
src/mochi/adapters/: __init__.py  adapter_stack.py  base_adapter.py  generation_mixin.py  project_adapter.py  registry.py
src/mochi/assay/: adapter.ts  agent-adapter.ts  comparison-adapter.ts  index.ts  llm-judge.ts  mcp-client.ts  ollama-client.ts
src/mochi/cli/: __init__.py  main.py
src/mochi/core/: __init__.py  async_utils.py  config.py  exceptions.py  language_specs.py  types.py
src/mochi/data_generation/: __init__.py  alpaca_converter.py  ast_extractor.py  diff_extractor.py  fim_generator.py  negative_examples.py  pattern_classifier.py  quality_filter.py  test_patterns.py  transform_formatter.py  transform_pipeline.py  yaml_examples.py
src/mochi/evaluation/: __init__.py  api_metrics.py
src/mochi/inference/: __init__.py  engine.py  prompt_builder.py
src/mochi/ingestion/: __init__.py  git_connector.py  package_docs.py
src/mochi/lsp/: __init__.py  client.py  context_extractor.py
src/mochi/mcp/: __init__.py  inference.py  inference_mlx.py  server.py
src/mochi/packaging/: __init__.py  package.py
src/mochi/preprocessing/: __init__.py  code_chunker.py
src/mochi/serving/: __init__.py  config.py  mcp_server.py  tool_definitions.py
src/mochi/serving/handlers/: __init__.py  tool_handlers.py
src/mochi/training/: __init__.py  evaluator.py  trainer.py
src/mochi/validation/: __init__.py  output_validator.py
tests/: __init__.py  test_adapters.py  test_core_types.py  test_language_specs.py  test_lsp.py  test_package_docs.py  test_pattern_classifier.py
