[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mochi"
version = "0.1.0"
description = "Domain-specific SLM generator for software projects"
readme = "docs/README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["slm", "fine-tuning", "code-generation", "llm"]
dependencies = [
    "click>=8.1.0",
    "pyyaml>=6.0",
    "gitpython>=3.1.0",
    "tree-sitter>=0.21.0",
    "tree-sitter-typescript>=0.21.0",
    "datasets>=2.18.0",
    "transformers>=4.40.0",
    "peft>=0.10.0",
    "accelerate>=0.29.0",
    "trl>=0.8.0",
    "torch>=2.2.0",
    "safetensors>=0.4.0",
    "langdetect>=1.0.9",
]

[project.optional-dependencies]
cuda = [
    "bitsandbytes>=0.43.0",  # CUDA only - for 4-bit quantization
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[project.scripts]
mochi = "mochi.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mochi"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
